--- a/Gizmo.Client.UI.Resources/Properties/Resources.az-latn-az.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.az-latn-az.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: az-Latn-AZ, Azerbaijani
   Exported by: Oleg Savelos
-  Exported at: Mon, 02 Oct 2023 14:47:39 +0300 
+  Exported at: Wed, 18 Oct 2023 10:02:26 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1277,177 +1277,177 @@ Zəhmət olmasa balansınızı artırın.</value>
     <value>Boşluq olmamalıfır</value> 
   </data> 
   <data name="GIZ_GEN_AN_ERROR_HAS_OCCURED" xml:space="preserve"> 
-    <value>An error has occurred.</value> 
+    <value>Səhv baş verdi.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SELECT_TYPE_LABEL" xml:space="preserve"> 
-    <value>Select the reason for contact</value> 
+    <value>Əlaqənin səbəbini seçin</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SELECT_TYPE_PLACEHOLDER" xml:space="preserve"> 
-    <value>Select something</value> 
+    <value>Bir şey seçin</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_VE_TYPE_IS_REQUIRED" xml:space="preserve"> 
-    <value>Select the reason for contact</value> 
+    <value>Əlaqənin səbəbini seçin</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_NOTE_LABEL" xml:space="preserve"> 
-    <value>What can we help you with?</value> 
+    <value>Biz sizə necə kömək edə bilərik?</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_NOTE_PLACEHOLDER" xml:space="preserve"> 
-    <value>What can we help you with?</value> 
+    <value>Biz sizə necə kömək edə bilərik?</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SEND" xml:space="preserve"> 
-    <value>Send</value> 
+    <value>Göndər</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_TITLE" xml:space="preserve"> 
-    <value>The request has been sent.</value> 
+    <value>Sorğu göndərildi.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_MESSAGE" xml:space="preserve"> 
-    <value>Please wait until the operator accepts your request, the answer will be sent in the notification section.</value> 
+    <value>Əməkdaşımız sorğunuzu qəbul edənə qədər gözləyin, cavab bildiriş bölməsində göndəriləcək.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_CANCEL" xml:space="preserve"> 
-    <value>Decline request</value> 
+    <value>Sorğunu ləğv edin</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_FAILED_TO_PROCESS" xml:space="preserve"> 
-    <value>Failed to process assistance request.</value> 
+    <value>Yardım sorğusunu göndərmək alınmadı.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing top up your balance.</value> 
+    <value>Oynamağa davam etmək üçün balansınızı artırın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and top up your balance.</value> 
+    <value>Oynamağa davam etmək üçün kredit borcunuzu ödəyib, balansınızı artırın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_BUY_TIME" xml:space="preserve"> 
-    <value>To continue playing buy a time pack.</value> 
+    <value>Oynamağa davam etmək üçün vaxt paketi alın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_BUY_TIME" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and buy a time pack.</value> 
+    <value>Oynamağa davam etmək üçün kredit borcunuzu ödəyib, vaxt paketi alın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_BUY_TIME_OR_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing buy a time pack or/and top up your balance.</value> 
+    <value>Oynamağa davam etmək üçün vaxt paketi alın və ya balansınızı artırın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_BUY_TIME_OR_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and buy a time pack or/and top up your balance.</value> 
+    <value>Oynamağa davam etmək üçün kredit borcunuzu ödəyib, vaxt paketi ala və ya balansınızı artıra bilərsiz.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_ACTIVATED" xml:space="preserve"> 
-    <value>Activated {0}</value> 
+    <value>{0} aktivləşdirildi</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_TOOLTIP_HEADER" xml:space="preserve"> 
-    <value>Expires</value> 
+    <value>Müddəti bitir</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_FROM_PURCHASE" xml:space="preserve"> 
-    <value>{0} from purchase</value> 
+    <value>alışdan {0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_FROM_USE" xml:space="preserve"> 
-    <value>{0} from use</value> 
+    <value>{0} istifadədən</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_LOGOUT" xml:space="preserve"> 
-    <value>after logout</value> 
+    <value>çıxışdan sonra</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_EXPIRATION_COUNTDOWN_STARTED_DESCRIPTION" xml:space="preserve"> 
-    <value>The package is active.</value> 
+    <value>Paket aktivdir.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_LOGOUT_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires after logout.</value> 
+    <value>Çıxışdan sonra müddəti bitir.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_PURCHASE_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires specific time after purchase of the package.</value> 
+    <value>Paketin alınmasından müəyyən müddət sonra vaxt başa çatır.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_FIRST_USE_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires specific time after the first use of the package.</value> 
+    <value>Paketin ilk istifadəsindən müəyyən müddət sonra vaxt başa çatır.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES" xml:space="preserve"> 
-    <value>Properties</value> 
+    <value>Xüsusiyyətlər</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_CLOSE_BALANCE_MESSAGE" xml:space="preserve"> 
-    <value>Don't forget to close your bill at the end of the session.</value> 
+    <value>Sessiya sonunda fakturanı sonlandırmağı unutmayın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_NOT_EXPIRE_MESSAGE" xml:space="preserve"> 
-    <value>The session will not end while you have the unlimited time credit option enabled.</value> 
+    <value>Limitsiz kredit seçimi aktiv olduğu müddətdə sessiya bitməyəcək.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_EXPIRE_MESSAGE" xml:space="preserve"> 
-    <value>When the current time expires, the session will be ended.</value> 
+    <value>Cari vaxt başa çatdıqda, sessiya başa çatacaq.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TOP_UP" xml:space="preserve"> 
-    <value>Top up balance</value> 
+    <value>Balansı artırın</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_GO_TO_SHOP" xml:space="preserve"> 
-    <value>Go to the Shop</value> 
+    <value>Sifariş edin</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_CREDIT" xml:space="preserve"> 
-    <value>Credit is available on the account.</value> 
+    <value>Hesabda kredit xətti mövcuddur.</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_UNLIMITED_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Unlimited credit</value> 
+    <value>Limitsiz kredit</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_SALES_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Store credit is available</value> 
+    <value>Mağazada kredit mövcuddur</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_TIME_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Credit for playing time is available</value> 
+    <value>Oynamaq üçün kredit xətti keçərlidir.</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_HEADER_CREDIT" xml:space="preserve"> 
-    <value>Credit</value> 
+    <value>Kredit</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SEE_ALL_AVAILABLE_TIME" xml:space="preserve"> 
-    <value>See all available time</value> 
+    <value>Bütün mövcud tariflərə baxın</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TITLE" xml:space="preserve"> 
-    <value>Game Time Sources</value> 
+    <value>Tarif və paketlər</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_RATE_PER_HOUR" xml:space="preserve"> 
-    <value>Rate {0}/hour</value> 
+    <value>Tarif 1saat/{0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PRODUCT_HOURS_MINUTES" xml:space="preserve"> 
-    <value>{0} h {1} min</value> 
+    <value>{0} s {1} dəq</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_FIXED_TIME" xml:space="preserve"> 
-    <value>Fixed Time</value> 
+    <value>Sabit vaxt</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_DEPOSIT" xml:space="preserve"> 
-    <value>Deposits</value> 
+    <value>Balans</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_CREDIT" xml:space="preserve"> 
-    <value>Credit</value> 
+    <value>Kredit</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PRODUCT_MINUTES" xml:space="preserve"> 
-    <value>{0} Minutes</value> 
+    <value>{0} Dəqiqə</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_SOURCE" xml:space="preserve"> 
-    <value>Source</value> 
+    <value>Mənbə</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_HOSTS" xml:space="preserve"> 
-    <value>Hosts</value> 
+    <value>Kompüterlər</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_AVAILABLE_UNTIL" xml:space="preserve"> 
-    <value>until {0}</value> 
+    <value>{0} tarixinədək</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_AVAILABLE" xml:space="preserve"> 
-    <value>Available</value> 
+    <value>Mövcuddur</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PURCHASE_DATE" xml:space="preserve"> 
-    <value>Purchase date</value> 
+    <value>Sifariş tarixi</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TIME" xml:space="preserve"> 
-    <value>Time</value> 
+    <value>Vaxt</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TIME_PRODUCT" xml:space="preserve"> 
-    <value>Time product</value> 
+    <value>Vaxt tarifləri</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TITLE" xml:space="preserve"> 
-    <value>Available time</value> 
+    <value>Mövcud zaman</value> 
   </data> 
   <data name="GIZ_USER_PURCHASES_ORDER_STATUS_VOIDED" xml:space="preserve"> 
-    <value>Voided</value> 
+    <value>Ləğv edilib</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_TITLE" xml:space="preserve"> 
-    <value>Assistance Request</value> 
+    <value>Yardım çağır</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_ACCEPTED" xml:space="preserve"> 
-    <value>The operator has accepted your request and will be there soon to assist you.</value> 
+    <value>Əməkdaşımız sorğunuzu qəbul etdi və tezliklə sizə kömək etmək üçün yanınızda olacaq.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_REJECTED" xml:space="preserve"> 
-    <value>Your request cannot be processed.</value> 
+    <value>Sorğunuz emal edilə bilməz.</value> 
   </data> 
   <data name="GIZ_GEN_GUEST" xml:space="preserve"> 
-    <value>Guest</value> 
+    <value>Qonaq</value> 
   </data> 
 </root>
