--- a/Gizmo.Client.UI.Resources/Properties/Resources.es-bo.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.es-bo.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: es-BO, Spanish (Bolivia)
   Exported by: Oleg Savelos
-  Exported at: Mon, 02 Oct 2023 14:47:42 +0300 
+  Exported at: Wed, 18 Oct 2023 10:02:29 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1277,177 +1277,177 @@ Por favor recarga tu cuenta.</value>
     <value>Los espacios en blanco no están permitidos</value> 
   </data> 
   <data name="GIZ_GEN_AN_ERROR_HAS_OCCURED" xml:space="preserve"> 
-    <value>An error has occurred.</value> 
+    <value>Se ha producido un error.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SELECT_TYPE_LABEL" xml:space="preserve"> 
-    <value>Select the reason for contact</value> 
+    <value>Selecciona el motivo del contacto</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SELECT_TYPE_PLACEHOLDER" xml:space="preserve"> 
-    <value>Select something</value> 
+    <value>Selecciona algo</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_VE_TYPE_IS_REQUIRED" xml:space="preserve"> 
-    <value>Select the reason for contact</value> 
+    <value>Selecciona el motivo del contacto</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_NOTE_LABEL" xml:space="preserve"> 
-    <value>What can we help you with?</value> 
+    <value>En qué te podemos ayudar?</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_NOTE_PLACEHOLDER" xml:space="preserve"> 
-    <value>What can we help you with?</value> 
+    <value>En qué te podemos ayudar?</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SEND" xml:space="preserve"> 
-    <value>Send</value> 
+    <value>Enviar</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_TITLE" xml:space="preserve"> 
-    <value>The request has been sent.</value> 
+    <value>La solicitud fue enviada</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_MESSAGE" xml:space="preserve"> 
-    <value>Please wait until the operator accepts your request, the answer will be sent in the notification section.</value> 
+    <value>Por favor espera a que el operador acepte tu solicitud, la respuesta se enviará a la sección de notificaciones.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_CANCEL" xml:space="preserve"> 
-    <value>Decline request</value> 
+    <value>Rechazar la solicitud</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_FAILED_TO_PROCESS" xml:space="preserve"> 
-    <value>Failed to process assistance request.</value> 
+    <value>No se ha podido procesar la solicitud de ayuda.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing top up your balance.</value> 
+    <value>Para seguir jugando recarga tu saldo.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and top up your balance.</value> 
+    <value>Para seguir jugando, paga lo que debes y recarga tu saldo.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_BUY_TIME" xml:space="preserve"> 
-    <value>To continue playing buy a time pack.</value> 
+    <value>Para seguir jugando compra un paquete de tiempo.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_BUY_TIME" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and buy a time pack.</value> 
+    <value>Para seguir jugando, paga lo que debes y compra un paquete de tiempo.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_BUY_TIME_OR_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing buy a time pack or/and top up your balance.</value> 
+    <value>Para seguir jugando, compra un paquete de tiempo y/o recarga tu saldo.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_BUY_TIME_OR_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and buy a time pack or/and top up your balance.</value> 
+    <value>Para seguir jugando, paga lo que debes y compra un paquete de tiempo y/o recarga tu saldo.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_ACTIVATED" xml:space="preserve"> 
-    <value>Activated {0}</value> 
+    <value>Acitvados {0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_TOOLTIP_HEADER" xml:space="preserve"> 
-    <value>Expires</value> 
+    <value>Expira</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_FROM_PURCHASE" xml:space="preserve"> 
-    <value>{0} from purchase</value> 
+    <value>{0} de compra</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_FROM_USE" xml:space="preserve"> 
-    <value>{0} from use</value> 
+    <value>{0} de uso</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_LOGOUT" xml:space="preserve"> 
-    <value>after logout</value> 
+    <value>despues de cerrar sesión</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_EXPIRATION_COUNTDOWN_STARTED_DESCRIPTION" xml:space="preserve"> 
-    <value>The package is active.</value> 
+    <value>El paquete está activo</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_LOGOUT_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires after logout.</value> 
+    <value>Expira luego de cerrar sesión</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_PURCHASE_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires specific time after purchase of the package.</value> 
+    <value>Expira en un tiempo determinado después de la compra del paquete.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_FIRST_USE_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires specific time after the first use of the package.</value> 
+    <value>Expira en un tiempo determinado después del primer uso del paquete.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES" xml:space="preserve"> 
-    <value>Properties</value> 
+    <value>Propiedades</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_CLOSE_BALANCE_MESSAGE" xml:space="preserve"> 
-    <value>Don't forget to close your bill at the end of the session.</value> 
+    <value>No olvides pagar lo que debes al final de la sesión.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_NOT_EXPIRE_MESSAGE" xml:space="preserve"> 
-    <value>The session will not end while you have the unlimited time credit option enabled.</value> 
+    <value>La sesión no terminará mientras tengas activada la opción de crédito de tiempo ilimitado.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_EXPIRE_MESSAGE" xml:space="preserve"> 
-    <value>When the current time expires, the session will be ended.</value> 
+    <value>Cuando el tiempo actual expire, la sesión terminará</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TOP_UP" xml:space="preserve"> 
-    <value>Top up balance</value> 
+    <value>Recargar saldo</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_GO_TO_SHOP" xml:space="preserve"> 
-    <value>Go to the Shop</value> 
+    <value>Ir a la tienda</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_CREDIT" xml:space="preserve"> 
-    <value>Credit is available on the account.</value> 
+    <value>Credito está disponible para esta cuenta</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_UNLIMITED_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Unlimited credit</value> 
+    <value>Crédito ilimitado</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_SALES_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Store credit is available</value> 
+    <value>Crédito de la tienda está disponible</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_TIME_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Credit for playing time is available</value> 
+    <value>Crédito para tiempo de juego está disponible</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_HEADER_CREDIT" xml:space="preserve"> 
-    <value>Credit</value> 
+    <value>Crédito</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SEE_ALL_AVAILABLE_TIME" xml:space="preserve"> 
-    <value>See all available time</value> 
+    <value>Ver todo el tiempo disponible</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TITLE" xml:space="preserve"> 
-    <value>Game Time Sources</value> 
+    <value>Origen del tiempo de juego</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_RATE_PER_HOUR" xml:space="preserve"> 
-    <value>Rate {0}/hour</value> 
+    <value>Tasa {0}/hora</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PRODUCT_HOURS_MINUTES" xml:space="preserve"> 
     <value>{0} h {1} min</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_FIXED_TIME" xml:space="preserve"> 
-    <value>Fixed Time</value> 
+    <value>Tiempo fijo</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_DEPOSIT" xml:space="preserve"> 
-    <value>Deposits</value> 
+    <value>Depósitos</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_CREDIT" xml:space="preserve"> 
-    <value>Credit</value> 
+    <value>Crédito</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PRODUCT_MINUTES" xml:space="preserve"> 
-    <value>{0} Minutes</value> 
+    <value>{0} Minutos</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_SOURCE" xml:space="preserve"> 
-    <value>Source</value> 
+    <value>Fuente</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_HOSTS" xml:space="preserve"> 
-    <value>Hosts</value> 
+    <value>Computadoras</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_AVAILABLE_UNTIL" xml:space="preserve"> 
-    <value>until {0}</value> 
+    <value>hasta {0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_AVAILABLE" xml:space="preserve"> 
-    <value>Available</value> 
+    <value>Disponible</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PURCHASE_DATE" xml:space="preserve"> 
-    <value>Purchase date</value> 
+    <value>Fecha de compra</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TIME" xml:space="preserve"> 
-    <value>Time</value> 
+    <value>Tiempo</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TIME_PRODUCT" xml:space="preserve"> 
-    <value>Time product</value> 
+    <value>Producto de tiempo</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TITLE" xml:space="preserve"> 
-    <value>Available time</value> 
+    <value>Tiempo disponible</value> 
   </data> 
   <data name="GIZ_USER_PURCHASES_ORDER_STATUS_VOIDED" xml:space="preserve"> 
-    <value>Voided</value> 
+    <value>Anulado</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_TITLE" xml:space="preserve"> 
-    <value>Assistance Request</value> 
+    <value>Solicitud de asistencia</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_ACCEPTED" xml:space="preserve"> 
-    <value>The operator has accepted your request and will be there soon to assist you.</value> 
+    <value>El operador ha aceptado tu solicitud y en breve estará allí para atenderte.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_REJECTED" xml:space="preserve"> 
-    <value>Your request cannot be processed.</value> 
+    <value>Tu solicitud no puede ser procesada.</value> 
   </data> 
   <data name="GIZ_GEN_GUEST" xml:space="preserve"> 
-    <value>Guest</value> 
+    <value>Invitado</value> 
   </data> 
 </root>
