--- a/Gizmo.Client.UI.Resources/Properties/Resources.en-US.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.en-US.resx
@@ -5,8 +5,8 @@
   Project: Gizmo Client UI
   Release: Working copy
   Locale: en-US, English
-  Exported by: Oleg Savelos
-  Exported at: Wed, 18 Oct 2023 10:02:25 +0300 
+  Exported by: Dimitrios Klapsis
+  Exported at: Thu, 26 Oct 2023 14:09:03 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1449,5 +1449,14 @@ Please recharge your account now.</value>
   </data> 
   <data name="GIZ_GEN_GUEST" xml:space="preserve"> 
     <value>Guest</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_EXPIRES" xml:space="preserve"> 
+    <value>Expires</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_REMAINING_TIME" xml:space="preserve"> 
+    <value>Remaining time</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_USABLE_TIME" xml:space="preserve"> 
+    <value>Usable time</value> 
   </data> 
 </root>
