--- a/Gizmo.Client.UI.Resources/Properties/Resources.tr-TR.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.tr-TR.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: tr-TR, Turkish
   Exported by: Oleg Savelos
-  Exported at: Wed, 18 Oct 2023 10:02:29 +0300 
+  Exported at: Thu, 02 Nov 2023 11:12:42 +0200 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1289,189 +1289,210 @@
     <value>Diğer kullanıcılar kullanıcı adınızı görecektir</value> 
   </data> 
   <data name="GIZ_GEN_LICENSE_RESERVATION_FAILED" xml:space="preserve"> 
-    <value>License reservation failed for {0}.</value> 
+    <value>Lisans rezervasyonu {0} için başarısız oldu.</value> 
   </data> 
   <data name="GIZ_PRODUCT_NOT_AVAILABLE" xml:space="preserve"> 
-    <value>Not available.</value> 
+    <value>Mevcut değil.</value> 
   </data> 
   <data name="GIZ_PRODUCT_NOT_AVAILABLE_ON_THIS_HOST" xml:space="preserve"> 
-    <value>Not available on this host.</value> 
+    <value>Bu masada mevcut değil.</value> 
   </data> 
   <data name="GIZ_REGISTRATION_VE_WHITE_SPACE_NOT_ALLOWED" xml:space="preserve"> 
-    <value>Whitespaces not allowed</value> 
+    <value>Boşluklara izin verilmez</value> 
   </data> 
   <data name="GIZ_GEN_AN_ERROR_HAS_OCCURED" xml:space="preserve"> 
-    <value>An error has occurred.</value> 
+    <value>Bir hata oluştu.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SELECT_TYPE_LABEL" xml:space="preserve"> 
-    <value>Select the reason for contact</value> 
+    <value>İletişim nedenini seçin</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SELECT_TYPE_PLACEHOLDER" xml:space="preserve"> 
-    <value>Select something</value> 
+    <value>Bir şey seçin</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_VE_TYPE_IS_REQUIRED" xml:space="preserve"> 
-    <value>Select the reason for contact</value> 
+    <value>İletişim nedenini seçin</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_NOTE_LABEL" xml:space="preserve"> 
-    <value>What can we help you with?</value> 
+    <value>Size nasıl yardımcı olabiliriz?</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_NOTE_PLACEHOLDER" xml:space="preserve"> 
-    <value>What can we help you with?</value> 
+    <value>Size nasıl yardımcı olabiliriz?</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SEND" xml:space="preserve"> 
-    <value>Send</value> 
+    <value>Gönder</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_TITLE" xml:space="preserve"> 
-    <value>The request has been sent.</value> 
+    <value>İstek gönderildi.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_MESSAGE" xml:space="preserve"> 
-    <value>Please wait until the operator accepts your request, the answer will be sent in the notification section.</value> 
+    <value>Lütfen operatör talebinizi kabul edene kadar bekleyin, cevap bildirim bölümünde gönderilecektir.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_CANCEL" xml:space="preserve"> 
-    <value>Decline request</value> 
+    <value>Talebi reddet</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_FAILED_TO_PROCESS" xml:space="preserve"> 
-    <value>Failed to process assistance request.</value> 
+    <value>Yardım talebi işleme alınamadı.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing top up your balance.</value> 
+    <value>Oynamaya devam etmek için bakiyenizi doldurun.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and top up your balance.</value> 
+    <value>Oynamaya devam etmek için kredi faturanızı kapatın ve bakiyenizi yükleyin.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_BUY_TIME" xml:space="preserve"> 
-    <value>To continue playing buy a time pack.</value> 
+    <value>Oynamaya devam etmek için bir zaman paketi satın alın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_BUY_TIME" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and buy a time pack.</value> 
+    <value>Oynamaya devam etmek için kredi faturanızı kapatın ve bir zaman paketi satın alın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_BUY_TIME_OR_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing buy a time pack or/and top up your balance.</value> 
+    <value>Oynamaya devam etmek için bir zaman paketi satın alın ve/veya bakiyenizi doldurun.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TO_CONTINUE_CLOSE_BALANCE_AND_BUY_TIME_OR_TOP_UP" xml:space="preserve"> 
-    <value>To continue playing, close your credit bill and buy a time pack or/and top up your balance.</value> 
+    <value>Oynamaya devam etmek için kredi faturanızı kapatın ve bir zaman paketi satın alın ve/veya bakiyenizi doldurun.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_ACTIVATED" xml:space="preserve"> 
-    <value>Activated {0}</value> 
+    <value>Etkinleştirildi {0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_TOOLTIP_HEADER" xml:space="preserve"> 
-    <value>Expires</value> 
+    <value>Sona erdi</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_FROM_PURCHASE" xml:space="preserve"> 
-    <value>{0} from purchase</value> 
+    <value>Satın alma işleminden {0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_FROM_USE" xml:space="preserve"> 
-    <value>{0} from use</value> 
+    <value>Kullanımdan {0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_LOGOUT" xml:space="preserve"> 
-    <value>after logout</value> 
+    <value>oturum kapatıldıktan sonra</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_EXPIRATION_COUNTDOWN_STARTED_DESCRIPTION" xml:space="preserve"> 
-    <value>The package is active.</value> 
+    <value>Paket aktif.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_LOGOUT_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires after logout.</value> 
+    <value>Oturum kapatıldıktan sonra sona erer.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_PURCHASE_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires specific time after purchase of the package.</value> 
+    <value>Paket satın alındıktan belirli bir süre sonra sona erer.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_AFTER_FIRST_USE_DESCRIPTION" xml:space="preserve"> 
-    <value>Expires specific time after the first use of the package.</value> 
+    <value>Paketin ilk kullanımından sonra belirli bir süre sona erer.</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES" xml:space="preserve"> 
-    <value>Properties</value> 
+    <value>Özellikler</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_CLOSE_BALANCE_MESSAGE" xml:space="preserve"> 
-    <value>Don't forget to close your bill at the end of the session.</value> 
+    <value>Oturum sonunda faturanızı kapatmayı unutmayın.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_NOT_EXPIRE_MESSAGE" xml:space="preserve"> 
-    <value>The session will not end while you have the unlimited time credit option enabled.</value> 
+    <value>Sınırsız zaman kredisi seçeneğini etkinleştirdiğiniz sürece oturum sona ermeyecektir.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_EXPIRE_MESSAGE" xml:space="preserve"> 
-    <value>When the current time expires, the session will be ended.</value> 
+    <value>Geçerli süre sona erdiğinde oturum sonlandırılacaktır.</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TOP_UP" xml:space="preserve"> 
-    <value>Top up balance</value> 
+    <value>Üst bakiye</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_GO_TO_SHOP" xml:space="preserve"> 
-    <value>Go to the Shop</value> 
+    <value>Mağazaya Git</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_CREDIT" xml:space="preserve"> 
-    <value>Credit is available on the account.</value> 
+    <value>Hesapta kredi mevcuttur.</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_UNLIMITED_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Unlimited credit</value> 
+    <value>Sınırsız kredi</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_SALES_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Store credit is available</value> 
+    <value>Mağaza kredisi mevcuttur</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_TIME_CREDIT_DESCRIPTION" xml:space="preserve"> 
-    <value>Credit for playing time is available</value> 
+    <value>Oyun süresi için kredi mevcuttur</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_HEADER_CREDIT" xml:space="preserve"> 
-    <value>Credit</value> 
+    <value>Kredi</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_SEE_ALL_AVAILABLE_TIME" xml:space="preserve"> 
-    <value>See all available time</value> 
+    <value>Mevcut tüm zamanları görün</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_TITLE" xml:space="preserve"> 
-    <value>Game Time Sources</value> 
+    <value>Oyun Zamanı Kaynakları</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_RATE_PER_HOUR" xml:space="preserve"> 
-    <value>Rate {0}/hour</value> 
+    <value>Ücret {0}/saat</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PRODUCT_HOURS_MINUTES" xml:space="preserve"> 
     <value>{0} h {1} min</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_FIXED_TIME" xml:space="preserve"> 
-    <value>Fixed Time</value> 
+    <value>Sabit Zaman</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_DEPOSIT" xml:space="preserve"> 
-    <value>Deposits</value> 
+    <value>Depozitolar</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_CREDIT" xml:space="preserve"> 
-    <value>Credit</value> 
+    <value>Kredi</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PRODUCT_MINUTES" xml:space="preserve"> 
-    <value>{0} Minutes</value> 
+    <value>{0} Dakika</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_SOURCE" xml:space="preserve"> 
-    <value>Source</value> 
+    <value>Kaynak</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_HOSTS" xml:space="preserve"> 
-    <value>Hosts</value> 
+    <value>Masalar</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_AVAILABLE_UNTIL" xml:space="preserve"> 
-    <value>until {0}</value> 
+    <value>{0}'a kadar</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_AVAILABLE" xml:space="preserve"> 
-    <value>Available</value> 
+    <value>Mevcut</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PURCHASE_DATE" xml:space="preserve"> 
-    <value>Purchase date</value> 
+    <value>Satın alma tarihi</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TIME" xml:space="preserve"> 
-    <value>Time</value> 
+    <value>Zaman</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TIME_PRODUCT" xml:space="preserve"> 
-    <value>Time product</value> 
+    <value>Zaman ürünü</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_TITLE" xml:space="preserve"> 
-    <value>Available time</value> 
+    <value>Kullanılabilir zaman</value> 
   </data> 
   <data name="GIZ_USER_PURCHASES_ORDER_STATUS_VOIDED" xml:space="preserve"> 
-    <value>Voided</value> 
+    <value>Geçersiz</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_TITLE" xml:space="preserve"> 
-    <value>Assistance Request</value> 
+    <value>Yardım Talebi</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_ACCEPTED" xml:space="preserve"> 
-    <value>The operator has accepted your request and will be there soon to assist you.</value> 
+    <value>Operatör talebinizi kabul etti ve size yardımcı olmak için yakında orada olacak.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_REJECTED" xml:space="preserve"> 
-    <value>Your request cannot be processed.</value> 
+    <value>Talebiniz işleme alınamıyor.</value> 
   </data> 
   <data name="GIZ_GEN_GUEST" xml:space="preserve"> 
-    <value>Guest</value> 
+    <value>Misafir</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_EXPIRES" xml:space="preserve"> 
+    <value>Süresi dolacak</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_REMAINING_TIME" xml:space="preserve"> 
+    <value>Kalan süre</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_USABLE_TIME" xml:space="preserve"> 
+    <value>Kullanılabilir zaman</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_TIME_OFFER" xml:space="preserve"> 
+    <value>Zaman paketi</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_FIXED_TIME" xml:space="preserve"> 
+    <value>Sabit zaman paketi</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_RATE" xml:space="preserve"> 
+    <value>Fiyat</value> 
+  </data> 
+  <data name="GIZ_USER_TIME_PRODUCTS_TITLE_USING_CREDIT" xml:space="preserve"> 
+    <value>Kredi kullanımı</value> 
   </data> 
 </root>
